@@ -123,3 +123,4 @@
 - Prepared extension for cef.
 - Working state for CEF integration on MX15HDi.
 - Added overlay_ready message.
+- Added support to reload cef overlays.
